src/objects/VisualProcessComponent__c.object
<CustomObject>
    <fields>
        <fullName>IsContainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsContainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>VisualProcessComponent__c</referenceTo>
        <relationshipLabel>Visual Process Components</relationshipLabel>
        <relationshipName>Visual_Process_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visual Process Component Type</label>
        <referenceTo>VisualProcessComponentType__c</referenceTo>
        <relationshipLabel>Visual Process Components</relationshipLabel>
        <relationshipName>Visual_Process_Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visual_Process__c</fullName>
        <label>Visual Process</label>
        <referenceTo>Visual_Process__c</referenceTo>
        <relationshipLabel>Visual Process Components</relationshipLabel>
        <relationshipName>Visual_Process_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visual Process Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Visual_Process__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Parent__c</columns>
        <columns>Position__c</columns>
        <columns>IsContainer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Process Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>